# weather_report

./: Cargo.toml  README.md  dockerfile  email_report.py  main.rs
.github/workflows /: docker-image.yml
