[package]
name = "data-processing-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde_json = "1.0.112"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
